--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="text">
         
           <h1>SKYLUSTER TECHNOLOGY INC</h1>
-          <p>Dream Capital</p>
+          <p>Dream Capital MIKEEE</p>
         </div>
       </div>
   
